# VEX-Py

./: .flake8  .gitignore  .prospector.yaml  .pylintrc  Makefile  README.md  __decor.py  inspect-cls  install-editable-dev  install-editable-dev.bat  poetry-add-deps  poetry-add-deps.bat  poetry.toml  pyproject.toml  requirements-devtest.txt  requirements.txt  setup.cfg  setup.py  timer.py  vision.py
.github/workflows/: test.yml  tests.yml
__decor/: __init__.py  util.py
docs/: build  conf.py  genindex.html  index.html  index.md  modules.html  parse-docstr  py-modindex.html  search.html  vex.brain.button.html  vex.brain.html  vex.brain.port.html  vex.brain.screen.html  vex.brain.sound.html  vex.brain.sound.note_type.html  vex.brain.sound.sound_type.html  vex.bumper_switch_sensor.html  vex.color_sensor.color_hue.html  vex.color_sensor.html  vex.controller.axis.html  vex.controller.button.html  vex.controller.html  vex.distance_sensor.html  vex.gyro_sensor.calibration_type.html  vex.gyro_sensor.html  vex.html  vex.interactive.html  vex.motor.brake_type.html  vex.motor.direction_type.html  vex.motor.html  vex.motor.torque_units.html  vex.motor.turn_type.html  vex.motor.velocity_units.html  vex.port.html  vex.time.html  vex.time.time_units.html  vex.touch_led.fade_type.html  vex.touch_led.html  vex.units_common.distance_units.html  vex.units_common.html  (+3 more)
docs/_static/: documentation_options.js
drivetrain/: __init__.py  drivetrain.py
install/: install-editable.bat
lint/: all  all.bat  bandit  bandit.bat  flake8  flake8.bat  pycodestyle  pycodestyle.bat  pylama  pylama.bat  pylint  pylint.bat
metadata/: classifiers  description  entry-points
metadata/requirements/: base.txt  dev.txt  doc.txt  lint.txt
motor_group/: __init__.py
smartdrive/: __init__.py
src/: __decor.py  __vex_decor.py  drivetrain.py  motor_group.py  smartdrive.py  timer.py  vexcode.py  vision.py
src/__vex/: __init__.py  decor.py  exec.py  open_edx_grader.py
src/__vex/cli/: exec.py
src/tests/: drivetrain_test.py
src/tests/brain/: battery_test.py  inertial_sensor_test.py  screen_test.py  sound_test.py  timer_test.py  timmer_test.py
src/tests/bumper/: bumper_test.py
src/tests/color/: color_test.py
src/tests/controller/: controller_test.py
src/tests/distance_sensor/: distance_sensor_test.py
src/tests/gyro_sensor/: gyro_sensor_test.py
src/tests/inertial/: inertial_test.py
src/tests/motor/: motor_test.py
src/tests/optical_sensor/: optical_sensor_test.py
src/tests/touch_led/: touch_led_test.py
src/vex/: __init__.py  _abstract.py  _abstract_device.py  abstract.py  brain.py  bumper_switch_sensor.py  color_sensor.py  controller.py  distance_sensor.py  gyro_sensor.py  interactive.py  motor.py  port.py  time.py  touch_led.py  units_common.py
src/vex/_cli/: __init__.py  compare_output.py  exec.py  inspect_class.py
src/vex/_common_enums/: __init__.py  analog.py  axis.py  axis_type.py  color.py  distance.py  numeric.py  orientation.py  orientation_type.py  percent.py  power.py  rotation.py  temperature.py  velocity.py
src/vex/_device/: __init__.py  abc.py  singleton.py  tri.py  v5.py
src/vex/_util/: doc.py  io.py  measurement_with_unit.py  type.py
src/vex/brain/: FontType.py  __init__.py  battery.py  button.py  port.py  screen.py  sound.py  timer.py
src/vex/brain/inertial_sensor/: __init__.py  axis_type.py  orientation_type.py
src/vex/brain/screen/: __init__.py  font.py  font_type.py
src/vex/brain/sound/: __init__.py  note_type.py  sound_type.py
src/vex/brain/speaker/: __init__.py  note.py  note_type.py  sound.py  sound_type.py
src/vex/bumper_switch_sensor/: __init__.py
src/vex/color_sensor/: __init__.py  color_hue.py
src/vex/controller/: __init__.py  axis.py  button.py  type.py
src/vex/distance_sensor/: __init__.py  object_size.py  object_size_type.py  sonar.py
src/vex/event/: __init__.py
src/vex/gyro_sensor/: __init__.py  calibration.py  calibration_type.py
src/vex/inertial/: __init__.py  axis_type.py  orientation_type.py
src/vex/motor/: __init__.py  brake.py  brake_type.py  current.py  direction.py  direction_type.py  efficiency.py  gear.py  torque.py  torque_units.py  turn.py  turn_type.py  velocity.py  velocity_units.py  voltage.py  voltage_units.py
src/vex/multi_device_group/: __init__.py  drive_train.py  motor_group.py  smart_drive.py
src/vex/optical_sensor/: __init__.py  gesture.py  gesture_info.py  gesture_type.py  led.py  led_state_type.py
src/vex/time/: __init__.py  time_units.py  timer.py  units.py
src/vex/touch_led/: __init__.py  color.py  fade.py  fade_type.py
src/vex/units_common/: __init__.py  color.py  current_units.py  distance.py  distance_units.py  electric.py  numeric.py  rotation.py  rotation_units.py
src/vex/util/: doc.py
src/vex/vision_sensor/: __init__.py  object.py  vision_object.py
test/: run
test/IQ/Gen2/VEXcode/: Test-Imports.IQ.Gen2.VEXcode.py
test/V5/RobotMesh/: .Test-Imports.V5.RobotMesh.py  Test-Imports.V5.RobotMesh.py
test/V5/RobotMesh/Motor/: .Test-Motor-efficiency.V5.RobotMesh.py  .Test-Motor-temperature.V5.RobotMesh.py  .Test-Motor-torque.V5.RobotMesh.py  .Test-Motor-type.V5.RobotMesh.py  .Test-Motor-value.V5.RobotMesh.py  Test-Motor-__init__.V5.RobotMesh.py  Test-Motor-__init__.py  Test-Motor-efficiency.V5.RobotMesh.py  Test-Motor-installed.V5.RobotMesh.SKIP.py  Test-Motor-installed.V5.RobotMesh.py  Test-Motor-temperature.V5.RobotMesh.py  Test-Motor-torque.V5.RobotMesh.py  Test-Motor-type.V5.RobotMesh.py  Test-Motor-value.V5.RobotMesh.py
tests/: Test-Brain.py  io_utils.py  test_brain.py  test_drivetrain.py
tests/IQ/Gen2/Color-Sensor/: color_test.py
tests/IQ/Gen2/Controller/: controller_test.py
tests/IQ/Gen2/Distance-Sensor/: distance_sensor_test.py
tests/brain/: inertial_sensor_test.py  screen_test.py
tests/color/: color_test.py
timer/: __init__.py
vex/: __init__.py  abstract.py  brain.py  bumper_switch_sensor.py  color_sensor.py  controller.py  distance_sensor.py  gyro_sensor.py  motor.py  port.py  time.py  touch_led.py  units_common.py
vision/: __init__.py
(+10 files in other folders)
