# Project has a 'pyproject.toml' and its build backend is missing the 'build_editable' hook.
# Since it does not have a 'setup.py' nor a 'setup.cfg', it cannot be installed in editable mode.
# Consider using a build backend that supports PEP 660.

# pip.pypa.io/en/stable/reference/build-system/pyproject-toml/#editable-installation
# setuptools.pypa.io/en/latest/userguide/quickstart.html?highlight=editable#development-mode

# setuptools.pypa.io/en/latest/references/keywords.html
# setuptools.pypa.io/en/latest/userguide/declarative_config.html


[metadata]

# must specify name & version to avoid UNKNOWN.egg-info
name = RobotMesh-VEX-PyB-API-Stubs
version = 22.8.11

description = Robot Mesh VEX Python B API Stubs
long_description = file: README.md
long_description_content_type = text/markdown

author = The Vinh LUONG (LƯƠNG Thế Vinh)
author_email = Vinh@STEAMforVietnam.org
maintainer = STEAM for Vietnam Foundation: Robotics & AI Educational Initative
maintainer_email = Edu.Robotics@STEAMforVietnam.org

url = https://GitHub.com/VEX-Robotics-AI/RobotMesh-VEX-PyB-API-Stubs
download_url = https://GitHub.com/VEX-Robotics-AI/RobotMesh-VEX-PyB-API-Stubs/archive/main.zip
project_urls =
  Homepage = https://GitHub.com/VEX-Robotics-AI/RobotMesh-VEX-PyB-API-Stubs
  Documentation = https://GitHub.com/VEX-Robotics-AI/RobotMesh-VEX-PyB-API-Stubs
  GitHub = https://GitHub.com/VEX-Robotics-AI/RobotMesh-VEX-PyB-API-Stubs
  Repository = https://GitHub.com/VEX-Robotics-AI/RobotMesh-VEX-PyB-API-Stubs

license = MIT
license_files =

keywords =
  Robot Mesh
  VEX
  Robotics

classifiers =
  Development Status :: 4 - Beta
  Framework :: Robot Framework
  Framework :: Robot Framework :: Library
  Framework :: Robot Framework :: Tool
  Intended Audience :: Education
  Operating System :: MacOS
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Education
  Topic :: Scientific/Engineering
  Topic :: Software Development :: Libraries :: Python Modules


[options]

# package
package_dir =
  =src

packages = find_namespace:
# namespace_packages = find_namespace:   # *** DEPRECATED ***
py_modules =
  motor_group
  drivetrain
  smartdrive
  timer
  vision
  vexcode

ext_package =
ext_modules =

include_package_data = True
package_data =

zip_safe = True


# dependencies
platforms =

python_requires = >= 3.9

install_requires =
  CLICK >= 8.1.3
  Decorator >= 5.1.1
  Wrapt >= 1.14.1

setup_requires =


# entry points / scripts
scripts =


# distribution / packaging
cmdclass =
distclass =

script_name =
script_args =
options =


# resources
test_suite =
tests_require =
test_loader =

eager_resources =


# deprecated / ignored by PIP
data_files =
dependency_links =
obsoletes =
provides =
requires =


[options.packages.find]
where = src
exclude =
include =
  *


[options.package_data]
[options.exclude_package_data]


[options.entry_points]
console_scripts =
  robotmesh-vex = __vex.cli:robotmesh_vex_cli


[options.extras_require]
devtest =
  Nose2 >= 0.12.0
  PyTest >= 7.1.2
