# Project has a 'pyproject.toml' and its build backend is missing the 'build_editable' hook.
# Since it does not have a 'setup.py' nor a 'setup.cfg', it cannot be installed in editable mode.
# Consider using a build backend that supports PEP 660.

# pip.pypa.io/en/stable/reference/build-system/pyproject-toml/#editable-installation
# setuptools.pypa.io/en/latest/userguide/quickstart.html?highlight=editable#development-mode

# setuptools.pypa.io/en/latest/references/keywords.html
# setuptools.pypa.io/en/latest/userguide/declarative_config.html


[metadata]

name = VEX-Py
version = 22.11.22

description = API Stubs for VEXcode Python & Robot Mesh VEX Python B
long_description = file: README.md
long_description_content_type = text/markdown

author = The Vinh LUONG (LƯƠNG Thế Vinh)
author_email = Vinh@STEAMforVietnam.org
maintainer = STEAM for Vietnam Foundation: Robotics & AI Educational Initative
maintainer_email = Edu.Robotics@STEAMforVietnam.org

url = https://GitHub.com/VEX-Robotics-AI/VEX-Py
download_url = https://GitHub.com/VEX-Robotics-AI/VEX-Py/archive/main.zip
project_urls =
  Homepage = https://GitHub.com/VEX-Robotics-AI/VEX-Py
  Documentation = https://GitHub.com/VEX-Robotics-AI/VEX-Py
  GitHub = https://GitHub.com/VEX-Robotics-AI/VEX-Py
  Repository = https://GitHub.com/VEX-Robotics-AI/VEX-Py

license = MIT
license_files =

keywords =
  Robot Mesh
  VEXcode
  VEX
  Robotics

classifiers =
  Development Status :: 4 - Beta
  Framework :: Robot Framework
  Framework :: Robot Framework :: Library
  Framework :: Robot Framework :: Tool
  Intended Audience :: Education
  Operating System :: MacOS
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Education
  Topic :: Scientific/Engineering
  Topic :: Software Development :: Libraries :: Python Modules


[options]

# package
package_dir =
  =src

packages = find_namespace:
# namespace_packages = find_namespace:   # *** DEPRECATED ***
py_modules =
  motor_group
  drivetrain
  smartdrive
  timer
  vision
  vexcode

ext_package =
ext_modules =

include_package_data = True
package_data =

zip_safe = True


# dependencies
platforms =

python_requires = >= 3.10

install_requires =
  Typing-Extensions >= 4.4.0

  Agent-Behavior-Model >= 22.9.3

setup_requires =


# entry points / scripts
scripts =


# distribution / packaging
cmdclass =
distclass =

script_name =
script_args =
options =


# resources
test_suite =
tests_require =
test_loader =

eager_resources =


# deprecated / ignored by PIP
data_files =
dependency_links =
obsoletes =
provides =
requires =


[options.packages.find]
where = src
exclude =
include =
  *


[options.package_data]
[options.exclude_package_data]


[options.entry_points]
console_scripts =


[options.extras_require]
build =
  Build >= 0.9.0

doc =
  # Sphinx & related
  Sphinx >= 5.3.0
  Sphinx-AutoBuild >= 2021.3.14
  SphinxContrib-JSMath >= 1.0.1

  # Markdown
  CommonMark >= 0.9.1
  MyST-Parser >= 0.18.1
  ReCommonMark >= 0.7.1

lint =
  Bandit >= 1.7.4
  Flake8 >= 5.0.4
  MyPy >= 0.990
  # Prospector >= 1.7.7
  PyCodeStyle >= 2.9.1
  PyDocStyle >= 6.1.1
  PyLama >= 8.4.1
  PyLint >= 2.15.5

  Black >= 22.10.0

publish =
  Twine >= 4.0.1

test =
  Nose >= 1.3.7
  Nose2 >= 0.12.0
  PyTest >= 7.2.0
  PyTest-Cov >= 4.0.0
  UnitTest2 >= 1.1.0
